Second Commit of MVC Project with Identity Migrarion BY vijay

--- a/EbookStore/EbookUI/appsettings.json
+++ b/EbookStore/EbookUI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-EbookUI-D8F416A3-085F-43F6-AB21-9CAB9CE5AF4D;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ebookLibraryIdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=ebooklibraryUserDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
