--- a/EbookStore/EbookDomain/EbookDomain.csproj
+++ b/EbookStore/EbookDomain/EbookDomain.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.6" />
+  </ItemGroup>
+
 </Project>
