Application Layer comitted by vijay

--- a/EbookStore/EbookApplication/EbookApplication.csproj
+++ b/EbookStore/EbookApplication/EbookApplication.csproj
@@ -5,9 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="interfaces\" />
-    <Folder Include="ViewModels\" />
     <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EbookDomain\EbookDomain.csproj" />
   </ItemGroup>
 
 </Project>
