Migrations updated by keshav

--- a/EbookStore/EbookUI/appsettings.json
+++ b/EbookStore/EbookUI/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "ebookLibraryIdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=ebooklibraryUserDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ebookLibraryIdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=ebooklibraryUserDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ebookLibraryDBConnection": "Server=(localdb)\\mssqllocaldb;Database=ebooklibraryDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
