Update Migration to SQL Server 2014

--- a/EbookStore/EbookUI/appsettings.json
+++ b/EbookStore/EbookUI/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "ebookLibraryIdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=ebooklibraryUserDB;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "ebookLibraryDBConnection": "Server=(localdb)\\mssqllocaldb;Database=ebooklibraryDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "ConnectionStrings": {    
+    "ebookLibraryIdentityConnection": "Server=192.168.2.108;Database=ebooklibraryUserDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ebookLibraryDBConnection": "Server=192.168.2.108;Database=ebooklibraryDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
