--- a/EbookStore/EbookUI/EbookUI.csproj
+++ b/EbookStore/EbookUI/EbookUI.csproj
@@ -19,4 +19,9 @@
     <ProjectReference Include="..\EbookInfraIOC\EbookInfraIOC.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
