ADD ListofBooks and BookController and update sql server connection by Gupta.

--- a/EbookStore/EbookUI/appsettings.json
+++ b/EbookStore/EbookUI/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {    
-    "ebookLibraryIdentityConnection": "Server=192.168.2.108;Database=ebooklibraryUserDB;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "ebookLibraryDBConnection": "Server=192.168.2.108;Database=ebooklibraryDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "ConnectionStrings": {
+    "ebookLibraryIdentityConnection": "Server=192.168.10.243;Database=ebooklibraryUserDB;Trusted_Connection=True;MultipleActiveResultSets=true;User ID=sa;Password=1234;Integrated Security=false",
+    "ebookLibraryDBConnection": "Server=192.168.10.243;Database=ebooklibraryDB;Trusted_Connection=True;MultipleActiveResultSets=true;User ID=sa;Password=1234;Integrated Security=false"
   },
   "Logging": {
     "LogLevel": {
